--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://www.akshay4570.github.io/netflix-gpt",
   "name": "netflix-gpt",
   "version": "0.1.0",
   "private": true,
@@ -7,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.3.0",
+    "openai": "^4.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
@@ -16,6 +18,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,6 +44,7 @@
   },
   "devDependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "gh-pages": "^6.1.1",
     "react-router-dom": "^6.15.0",
     "tailwindcss": "^3.3.3"
   }
