Configurations for hosting on Github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://www.akshay4570.github.io/netflix-gpt",
+  "homepage": "https://akshay4570.github.io/netflix-gpt",
   "name": "netflix-gpt",
   "version": "0.1.0",
   "private": true,
